--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,8 +11,9 @@
   booktitle={Proceedings of the ACM SIGIR Conference on Asia-Pacific Information Retrieval (SIGIR-AP)},
   year={2025},
   note={To appear},
-  pdf={https://dl.acm.org/doi/pdf/10.1145/3626772.3657669},
-  url={https://dl.acm.org/doi/10.1145/3626772.3657669},
+  pdf={https://arxiv.org/abs/2511.15061},
+  url={https://arxiv.org/abs/2511.15061},
   preview={sigir-ap-2025.png},
-
 }
+
+
