--- a/_news/2025-09-01-sigir-ap.md
+++ b/_news/2025-09-01-sigir-ap.md
@@ -6,5 +6,5 @@ inline: true
 related_posts: false
 ---
 
-🔥 Our paper "Beyond GeneGPT: A Multi-Agent Architecture with Open-Source LLMs for Enhanced Genomic Question Answering" has been accepted at SIGIR-AP 2025! Looking forward to presenting it in December!
+🔥 Our paper "[Beyond GeneGPT: A Multi-Agent Architecture with Open-Source LLMs for Enhanced Genomic Question Answering](https://arxiv.org/abs/2511.15061)" has been accepted at SIGIR-AP 2025! Looking forward to presenting it in December!
 
